CREATE TABLE todo_list (
	id SERIAL PRIMARY KEY,
	name VARCHAR(30) NOT NULL,
	group_id INTEGER NOT NULL REFERENCES todo_group(id) ON DELETE CASCADE,
	user_id INTEGER NOT NULL REFERENCES users(id) ON DELETE CASCADE,
	created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
	updated_at TIMESTAMP
);